# music-monitor

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  E2E_TEST_RUNBOOK.md  LICENSE  Makefile  README.md  config.toml.example  coverage.xml  docker-compose.sample.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  docker-image.yml  release.yml
src/music_monitor/: __init__.py  __main__.py  app.py  beets_metadata.py  config.py  constants.py  lidarr_client.py  logging_setup.py  path_mapper.py  processor.py  types.py  watcher.py
src/music_monitor/clients/: __init__.py  coverart.py  lidarr.py  musicbrainz.py
src/music_monitor/mapping/: paths.py
src/music_monitor/metadata/: __init__.py  beets_writer.py
src/music_monitor/services/: __init__.py  application.py  processing.py  watching.py
tests/: conftest.py  test_app.py  test_beets_writer_helpers.py  test_config.py  test_coverart_client.py  test_entrypoints_and_exports.py  test_lidarr_client.py  test_logging_setup.py  test_mapping.py  test_metadata_writer.py  test_musicbrainz_client.py  test_processor.py  test_watcher.py
