[project]
name = "music-monitor"
version = "0.1.0"
description = "Folder watcher that tags audio with beets, consults Lidarr, and organizes output"
readme = "README.md"
authors = [{ name = "Nathan Bland" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
  "beets==2.7.1",
  "httpx>=0.27.0",
  "typing-extensions>=4.12.0",
  "watchfiles>=0.23.0",
  "python-json-logger>=2.0.7",
]

[project.scripts]
music-monitor = "music_monitor.__main__:main"

[project.urls]
Homepage = "https://github.com/NathanBland/music-monitor"
Repository = "https://github.com/NathanBland/music-monitor"
Issues = "https://github.com/NathanBland/music-monitor/issues"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/music_monitor"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "mediafile"
ignore_missing_imports = true
